Header html changes

--- a/HeaderFooters/Multi Currency For Wealth_header.html
+++ b/HeaderFooters/Multi Currency For Wealth_header.html
@@ -2,10 +2,11 @@
 
 <style>
 
-.logo-date{
-	position: absolute;
-    top: 93px;
-    left: 49px;
+.logo-date {
+    position: absolute;
+    top: 79px;
+    left: 52px;
+    font-size: 9px;
 }
 
 </style>
@@ -17,13 +18,15 @@
 
 <div class="row">
 
-<div class="col-lg-6 col-sm-6" style="height:100px;"><div class="card border-0"><div class="card-body float-left py-2"><div class="eConfirm-logo-container"><img src="common/images/eConfirm.png" alt="eConfirm Logo" height="120" style="padding-top: 15px;"></div></div></div></div>
+<div class="col-lg-6 col-sm-6" style="height:100px;"><div class="card border-0"><div class="card-body float-left py-2"><div class="eConfirm-logo-container"><img src="common/images/eConfirm.png" alt="eConfirm Logo" height="120" style="padding-top: 15px;height: 95px;width: 114px;"></div></div></div></div>
 
 <div class="logo-date"></div>
 
-<div class="col-lg-6 col-sm-6" style="height:100px;"><div class="card border-0"><div class="card-body py-2"><a class="navbar-brand float-right mr-0" href="javascript:void(0);"> <img src="common/images/NedBankLogoBlack.png" height="130"></a></div></div></div>
+<div class="col-lg-6 col-sm-6" style="height:100px;"><div class="card border-0"><div class="card-body py-2"><a class="navbar-brand float-right mr-0" href="javascript:void(0);"> <img src="common/images/NEDBANKLogo.png" height="130"></a></div></div></div>
 
-</div><script>
+</div>
+
+<script>
 
 	function getDate()
 	{
