Changes for Statement of HL, PL and MCA

--- a/UserFiles/HeaderFooters/Home Loan For PML Segment African_footer.html
+++ b/UserFiles/HeaderFooters/Home Loan For PML Segment African_footer.html
@@ -15,7 +15,7 @@
 
 <body style="zoom: 1.2;">
 
-<div class="ftr pt-2"><div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/See_money_differently.PNG" alt="Nedbank slogan" width="180"></div><div class="col-lg-8 col-sm-8"><img class="ftr-rt-span1" src="common/images/NEDBANK_Name.png" alt="Nedbank Name" width="100"></div></div><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2">Nedbank Ltd Reg No 1951/000009/06. Authorised financial services and registered credit provider (NCRCP16).</span></div></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
+<div class="ftr pt-2"><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2" style="float: right !important; margin-right: 0.5rem !important;">Peoples Mortgage Limited Reg No 1994/000929/06 Lid van die Nedbank Groep. Gregistreerde kredietverskaffer ingevolge die Nasionale</span><br><span style="float: right !important; margin-right: 0.5rem !important;" class="ftr-rt-span2"> Kredietwet (NCR Reg No NCRCP58).</span></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
 
 
 </body></html>
