--- a/UserFiles/HeaderFooters/Home Loan For PML Segment African_header.html
+++ b/UserFiles/HeaderFooters/Home Loan For PML Segment African_header.html
@@ -22,7 +22,7 @@
 
 <div class="logo-date"></div>
 
-<div class="col-lg-6 col-sm-6" style="height:100px;"><div class="card border-0"><div class="card-body py-2"><a class="navbar-brand float-right mr-0" href="javascript:void(0);"> <img src="common/images/NEDBANKLogo.png" height="130"></a></div></div></div>
+<div class="col-lg-6 col-sm-6" style="height:100px;"><div class="card border-0"><div class="card-body py-2"><a class="navbar-brand float-right mr-0" href="javascript:void(0);"> <img src="common/images/PML.png" height="130"></a></div></div></div>
 
 </div>
 
