--- a/UserFiles/HeaderFooters/Home Loan For Wealth Segment English_footer.html
+++ b/UserFiles/HeaderFooters/Home Loan For Wealth Segment English_footer.html
@@ -15,7 +15,13 @@
 
 <body style="zoom: 1.2;">
 
-<div class="ftr pt-2"><div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/See_money_differently.PNG" alt="Nedbank slogan" width="180"></div><div class="col-lg-8 col-sm-8"><img class="ftr-rt-span1" src="common/images/NEDBANK_Name.png" alt="Nedbank Name" width="100"></div></div><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2">Nedbank Ltd Reg No 1951/000009/06. Authorised financial services and registered credit provider (NCRCP16).</span></div></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
+<div class="ftr pt-2">
+<div class="row">
+<div class="col-lg-2 col-sm-2"><img class="ftr-lt-span1" style="margin-left: 0px !important;" src="common/images/Wealth_Footer.PNG" alt="Nedbank slogan" width="250" height="100"></div>
+	<div class="col-lg-10 col-sm-10"><span class="ftr-rt-span2" style="margin-right: 0.5rem !important;">Nedgroup Private Wealth (Pty) Ltd Reg No 1997/009637/07, trading as Nedbank Private Wealth. Authorised</span><br><span class="ftr-rt-span2" style="margin-right: 0.5rem !important;">financial services provider (FSP828), registered credit provider through Nedbank Ltd (NCRCP16) and</span><br><span class="ftr-rt-span2" style="margin-right: 0.5rem !important;">member of JSE Ltd through Nedgroup Private Wealth Stockbrokers (Pty) Ltd (NCRCP59).</span></div>
+	</div>
+<!-- <div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/Wealth_Footer.PNG" alt="Nedbank slogan" width="250" height="100"></div></div> -->
+<div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
 
 
 </body></html>
