--- a/UserFiles/HeaderFooters/Investment For Wealth Segment African_footer.html
+++ b/UserFiles/HeaderFooters/Investment For Wealth Segment African_footer.html
@@ -5,18 +5,20 @@
 .ftr {
     width: 100%;
     height: auto;
-    line-height: 18px;
+    line-height: 17px;
 	padding-top: 60px;
 }
-
 
 </style>
 
 </head>
 
 <body style="zoom: 1.2;">
-
-<div class="ftr pt-2"><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2" style="float: right !important; margin-right: 0.5rem !important;">Peoples Mortgage Limited Reg No 1994/000929/06 Lid van die Nedbank Groep. Gregistreerde kredietverskaffer ingevolge die Nasionale</span><br><span style="float: right !important; margin-right: 0.5rem !important;" class="ftr-rt-span2"> Kredietwet (NCR Reg No NCRCP58).</span></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
+<div class="ftr pt-2">
+<div class="row">
+<div class="col-lg-2 col-sm-2"><img class="ftr-lt-span1" style="margin-left: 0px !important;" src="common/images/Wealth_Footer.PNG" alt="Nedbank slogan" width="250" height="100"></div><div class="col-lg-10 col-sm-10"><span class="ftr-rt-span2" style="margin-right: 0.5rem !important;">NEDBANK BPK REG NO 1951/000009/06. GEMAGTIGDE FINANSIELE DIENS- EN GEREGISTREERDE KREDIETVERSKAFFER (NCRCP16).</span></div>
+</div>
+<div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
 
 
 </body></html>
