--- a/UserFiles/HeaderFooters/Investment Other Segment For African_footer.html
+++ b/UserFiles/HeaderFooters/Investment Other Segment For African_footer.html
@@ -15,7 +15,7 @@
 
 <body style="zoom: 1.2;">
 
-<div class="ftr pt-2"><div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/See_money_differently.PNG" alt="Nedbank slogan" width="200"></div><div class="col-lg-8 col-sm-8"><img class="ftr-rt-span1" src="common/images/NEDBANK_Name.png" alt="Nedbank Name" width="120"></div></div><br><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2">Nedbank Bpk Reg No 1951/000009/06. Gelisensieerde finansiëlediens-en geregistreerde kredietverskaffer (NCRCP16).</span></div></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
+<div class="ftr pt-2"><div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/See_money_differently.PNG" alt="Nedbank slogan" width="200"></div><div class="col-lg-8 col-sm-8"><img class="ftr-rt-span1" src="common/images/NEDBANK_Name.png" alt="Nedbank Name" width="120"></div></div><br><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2">Nedbank Bpk Reg No 1951/000009/06. Gemagtigde finansiële diens- en geregistreerde kredietverskaffer (NCRCP16).</span></div></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
 
 
 </body></html>
