--- a/UserFiles/HeaderFooters/Corporate Saver English_footer.html
+++ b/UserFiles/HeaderFooters/Corporate Saver English_footer.html
@@ -15,7 +15,7 @@
 
 <body style="zoom: 1.2;">
 
-<div class="ftr pt-2"><div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/See_money_differently.PNG" alt="Nedbank slogan" width="180"></div><div class="col-lg-8 col-sm-8"><img class="ftr-rt-span1" src="common/images/NEDBANK_Name.png" alt="Nedbank Name" width="100"></div></div><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2">Nedbank Ltd Reg No 1951/000009/06. Authorised financial services and registered credit provider (NCRCP16).</span></div></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
+<div class="ftr pt-2"><div class="row"><div class="col-lg-4 col-sm-4"><img class="ftr-lt-span1" src="common/images/See_money_differently.PNG" alt="Nedbank slogan" width="180"></div><div class="col-lg-8 col-sm-8"><img class="ftr-rt-span1" src="common/images/NEDBANK_Name.png" alt="Nedbank Name" width="100"></div></div><div class="row"><div class="col-lg-12 col-sm-12"><span class="ftr-rt-span2" style="font-size: 8pt;padding-top: 12px;">Nedbank Ltd Reg No 1951/000009/06. Authorised financial services and registered credit provider (NCRCP16).</span></div></div><div class="row"><div class="col-lg-12 col-sm-12 ftr-div"></div></div></div>
 
 
 </body></html>
