Trying to resolve font icon issues and pdf issues

--- a/App/ClientApp/src/index.html
+++ b/App/ClientApp/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,900&display=swap" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,900&display=swap" rel="stylesheet">
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
@@ -15,8 +15,19 @@
   <script src="https://code.highcharts.com/modules/series-label.js"></script>
   <script src="https://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
-  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>-->
 
+  <link href="./assets/content/fonts.scss" rel="stylesheet" />
+  <link href="./assets/content/material.scss" rel="stylesheet" />
+  <script src="./assets/Js/jquery.min.js"></script>
+  <script src="./assets/Js/popper.min.js"></script>
+  <script src="./assets/Js/highcharts.js"></script>
+  <script src="./assets/Js/series-label.js"></script>
+  <script src="./assets/Js/exporting.js"></script>
+  <script src="./assets/Js/export-data.js"></script>
+  <script src="./assets/Js/accessibility.js"></script>
+  <link href="./assets/content/icon.css?family=Material+Icons&display=block"
+        rel="stylesheet">
 </head>
 <body class="theme0 site ltr">
   <app-root></app-root>
