Replace old Html to  new Html

--- a/App/ClientApp/src/index.html
+++ b/App/ClientApp/src/index.html
@@ -28,6 +28,7 @@
   <script src="./assets/Js/accessibility.js"></script>
   <link href="./assets/content/icon.css?family=Material+Icons&display=block"
         rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="theme0 site ltr">
   <app-root></app-root>
