--- a/App/ClientApp/src/index.html
+++ b/App/ClientApp/src/index.html
@@ -29,6 +29,8 @@
   <link href="./assets/content/icon.css?family=Material+Icons&display=block"
         rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Oswald:wght@300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body class="theme0 site ltr">
   <app-root></app-root>
