--- a/App/ClientApp/src/index.html
+++ b/App/ClientApp/src/index.html
@@ -17,6 +17,7 @@
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
   <script src="https://code.highcharts.com/modules/accessibility.js"></script>-->
 
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
   <link href="./assets/content/fonts.scss" rel="stylesheet" />
   <link href="./assets/content/material.scss" rel="stylesheet" />
   <script src="./assets/Js/jquery.min.js"></script>
